--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,102 @@
+/* Reset some default styles */
+body, h1, ul, li, a {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+  }
+  
+  /*Header*/
+  .header {
+    text-align: center;
+    padding: 16px 0;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .header-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  
+  .header-col {
+    flex: 0 0 33%;
+    text-align: center;
+  }
+  
+  .blog-header-logo {
+    font-style: italic;
+    color: #333;
+    text-decoration: none;
+  }
+  
+  .nav {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    gap: 16px;
+    padding: 0;
+  }
+  
+  .nav-item {
+    flex: 0 0 auto;
+  }
+  
+  .nav-link {
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    color: #007bff;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .nav-link:hover {
+    background-color: #007bff;
+    color: #fff;
+  }
+  
+  .nav-link.active {
+    background-color: #0056b3;
+    color: #fff;
+  }
 
+
+  /* OLD LOOK */
+  .old-paper {
+    height: 100vh; /* Full height */
+    background: radial-gradient(circle, #fdf5e6 0%, #f5deb3 60%, #deb887 100%);
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.3);
+    color: #3E2723; /* A brownish text color to match the theme */
+    font-family: 'Georgia', serif;
+    padding: 20px;
+    box-sizing: border-box;
+    background-blend-mode: multiply;
+  }
+
+
+  /* Members style */
+
+.team-review {
+    display: flex;
+}
+
+  .team-member-review {
+    border-radius: 15px;
+  }
+
+  .team-member-review-image {
+    width: 100px;
+    height: auto;
+    border-radius: 15pt;
+  }
+
+  /* QUIZ STYLES */
+
+  
 .quizbody {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -22,12 +120,17 @@
     margin: 20px auto; 
   }
   
-  h1 {
+  /*h1 {
     font-size: 32px;
     text-align: center;
     color: #2575fc;
     margin-bottom: 30px;
   }
+
+    h2 {
+    font-size: 22px;
+    color: #6a11cb;
+  }*/
   
   .question-block {
     background: #e6daec;
@@ -37,10 +140,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
-  h2 {
-    font-size: 22px;
-    color: #6a11cb;
-  }
+
   
   label {
     display: block;
@@ -120,3 +220,4 @@
       font-size: 18px;
     }
   }
+  
