--- a/quiz.css
+++ b/quiz.css
@@ -3,7 +3,7 @@
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #6a11cb, #2575fc);
+    
     display: flex;
     justify-content: center;
     align-items: flex-start; 
@@ -30,7 +30,7 @@
   }
   
   .question-block {
-    background: #e6daec;
+    background: #e7d8ae;
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 8px;
